# echonote

./: .gitignore  README.md  pyproject.toml  setup.bat  start.bat  uninstall.bat
docs/: decisions.md  design.md  it-pitch.md  tasks.md
scripts/: make-release.sh  setup.ps1  uninstall.ps1
src/echonote/: __init__.py  app.py  config.py  diarizer.py  exporter.py  llm.py  transcriber.py
src/echonote/prompts/: meeting.txt
tests/: test_exporter.py  test_llm.py  test_smoke.py  test_transcriber.py
